<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="title_locations">Locations</string>
    <string name="title_characters">Characters</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_location_details">Location details</string>
    <string name="title_episode_details">Episode details</string>
    <string name="title_character_details">Character details</string>
</resources>